# EDA

./: CMakeCache.txt  CMakeLists.txt  Course of Dimensionality.cpp  Octree.cpp
Course of Dimensionality/: CMakeLists.txt  Course of Dimensionality.cpp
Kmeans/: K-mean.cpp  prueba 1.txt  sample_out.txt
Octree V2/: Octree Doc.txt  Octree.cpp  puntos.txt
Octree V3/: castle.txt  main.cpp  octree doc.txt  octree.h  qt.cpp  qt.h  untitled1.pro
